--- a/biography.html
+++ b/biography.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <p><a href="index.html">>home</a></p>
-        <h3>"Nietzsche: Philosopher, Psychologist, Antichrist" by Walter Kauffman</h3>
+        <center>
+            <h3>"Nietzsche: Philosopher, Psychologist, Antichrist" by Walter Kauffman</h3>
+        </center>
         <p>isbn: 0691019835</p>
         <h3>Life</h3>
         <ul>
@@ -24,8 +26,8 @@
             <li>his sister got the exclusive rights to his works after death</li>
             <li>sister was nationalistic and anti-Semite</li>
             <li>distorted writings in severals ways to push her own agenda</li>
-            <li>ultimatley the reputation he had prior to the publishing of this book was very bad and undeserved</li>
-            <li>he denounces many of the doctrines which certain scholars have attempted to attach to him, like Darwainism</li>
+            <li>ultimately the reputation he had prior to the publishing of this book was very bad and undeserved</li>
+            <li>he denounces many of the doctrines which certain scholars have attempted to attach to him, like Darwinism</li>
         </ul>
         <h3>Power</h3>
         <ul>
@@ -36,9 +38,9 @@
         </ul>
         <h3>Christianity</h3>
         <ul>
-            <li>saw it as a necessary evil but one that ultimatley had to be done away with</li>
-            <li>believes that Jesus's followers didn't follow him faithfully</li>
-            <li>truth and faith are diametrically opposed so that you can't have efaith without sacrificing intelectual integrity</li>
+            <li>saw it as a necessary evil but one that ultimately had to be done away with</li>
+            <li>believes that Jesus' followers didn't follow him faithfully</li>
+            <li>truth and faith are diametrically opposed so that you can't have faith without sacrificing intellectual integrity</li>
         </ul>
         <h3>Socrates</h3>
         <ul>
@@ -54,15 +56,15 @@
         </ul>
         <h3>Influence</h3>
         <ul>
-            <li>had a profoudn influence and one of the few philosophers that inteligent readers, not merely specialists, read for pleasure</li>
-            <li>influenced big names such as Heidigger, Freud, and Sartre</li>
+            <li>had a profound influence and one of the few philosophers that intelligent readers, not merely specialists, read for pleasure</li>
+            <li>influenced big names such as Heidegger, Freud, and Sartre</li>
         </ul>
         <h3>Style</h3>
         <ul>
-            <li>objected to setting up abstract, metazphysical systems</li>
+            <li>objected to setting up abstract, metaphysical systems</li>
             <li>instead of doing that he experiments in his thoughts and manners</li>
             <li>very much opposed rhetoric and dogma</li>
-            <li>he not merly a philosopher but a psychologist, antichrist, poet, and great literary figure</li>
+            <li>he not merely a philosopher but a psychologist, Antichrist, poet, and great literary figure</li>
         </ul>
         <hr>
         <center>
@@ -71,3 +73,5 @@
         <p>Joseph Goebbels, who was a NAZI politician and Reich Minister of Propaganda.</p>
     </body>
 </html>
+
+
