--- a/ethics.html
+++ b/ethics.html
@@ -6,6 +6,9 @@
         <title>Year in Review</title>
     </head>
     <body>
-        <h3>Book 1 of Aristotle's "Nichomacean Ethics"</h3>
+        <p><a href="index.html">>home</a></p>
+        <center>
+            <h3>Book 1 of Aristotle's "Nichomacean Ethics"</h3>
+        </center>
     </body>
 </html>
