--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
             <p>- Dominic Carducci</p>
         </center>
         <h3>Purpose</h3>
-        <p>Supposed to talk about media that has influenced us over the past year. Recently I read a book and took an online course that I took some notes on. Guess I might as well put them up here. I should mention that I'm no expert, and merely study this as a hobby.</p>
+        <p>Supposed to talk about media that has influenced us over the past year. Recently I read a book and took an online course that I took some notes on. Guess I might as well put them up here. I should mention that I'm no expert, and merely study this as a hobby. The notes are not in context, so they make little sense to someone who has not seen the sources material; it can be easily misinterpreted to espousing something which it is not.</p>
         <h3><a href="ethics.html">Book 1 of Aristotle's "Nichomacean Ethics"</a></h3>
         <p>This has been very deservedly put among the greatest works on ethics. Aristotle doesn't rely on convictions or theological presuppositions to defend his positions, merely reason.</p>
         <h3><a href="biography.html">"Nietzsche: Philosopher, Psychologist, Antichrist" by Walter Kauffman</a></h3>
-        <p>This book redefined the way scholars interpreted Nietzsche, previously before that he had quite a sour reputation due mainly to lies and deciet. It is a biography of both Nietzsche's life and thougt.</p>
+        <p>This book redefined the way scholars interpreted Nietzsche, previously before that he had quite a sour reputation due mainly to lies and deceit. It is a biography of both Nietzsche's life and thought.</p>
         <h3><a href="policy.html">Notes on American Public Policy</a></h3>
-        <p>Hillsdale college offers great online classes at <a href="https://online.hillsdale.edu">online.hillsdale.edu.</a> I'm taking the one on public policy. This course offers the interpretation from a constitutional standpoint, preching more conservative doctrines.</p>
+        <p>Hillsdale college offers great online classes at <a href="https://online.hillsdale.edu">online.hillsdale.edu.</a> I'm taking the one on public policy. This course offers the interpretation from a constitutional standpoint, preaching more conservative doctrines.</p>
+        <h3><a href="devlin.html">Janet Devlin</a></h3>
+        <p>Great artist that combines folk and pop. New album is releasing June 5, so I'm looking foward to that.</p>
         <hr>
         <center>
             <img src="./Pictures/athens_school.jpg" style="width:40%;padding-top:15px;">
         </center>
-        <p>This is quite a popular painting. It is by Raffaello Sanzio called "The School of Athens" in English. It depicts various artists and thinkers all centered around the two most imfamous, that is Plato and Aristotle. A small detail that I read somewhere of this painting was that notice how Plato is pointing up and Aristotle down. Plato's philosophy was very abstract, very metaphysical. Aristotle more down to earth and empirical. They're both holding a work of their own pen, "Timaeus" and "Ethics" respectively.</p>
+        <p>This is quite a popular painting. It is by Raffaello Sanzio called "The School of Athens" in English. It depicts various artists and thinkers all centered around the two most infamous, that is Plato and Aristotle. A small detail that I read somewhere of this painting was that notice how Plato is pointing up and Aristotle down. Plato's philosophy was very abstract, very metaphysical. Aristotle more down to earth and empirical. They're both holding a work of their own pen, "Timaeus" and "Ethics" respectively.</p>
     </body>
 </html>
