--- a/policy.html
+++ b/policy.html
@@ -6,6 +6,56 @@
         <title>Year in Review</title>
     </head>
     <body>
-        <h3>Notes on American Public Policy</h3>
+        <p><a href="index.html">>home</a> </p>
+        <center>
+            <h3>Notes on American Public Policy</h3>
+        </center>
+        <p>There, I believe, are ten lectures in total. I'm only going to put here the limited notes I took for the two covering regulation and immigration.</p>
+        <h3>Regulation</h3>
+        <ul>
+            <li>policy is made by administrative agencies</li>
+            <li>neither courts nor administrative agencies are elected and aren't accountable the way they're supposed to be</li>
+            <li>the department of justice is the agency that put in motion the changes in immigration policy</li>
+            <li>study of the law that governs these agencies needs to be paid attention to</li>
+            <li>limited government allows us to employ our own devices</li>
+            <li>all ideologies want to impose a doctrine and way of life</li>
+        </ul>
+        <h3>Immigration</h3>
+        <ul>
+            <li>very little clear thinking of mass immigration on the character of America</li>
+            <li>if all men are created equal then government must be based on the consent of the governed</li>
+            <li>if born in a particular place then you're a citizen of said place</li>
+            <li>you are tied to the land of your birth</li>
+            <li>birth right citizenship is a throwback to feudalism</li>
+            <li>citizenship is a social contract</li>
+            <li>according to the constitution a citizen if born in the United States and subject to its jurisdiction</li>
+            <li>children follow descent of parents, not the child</li>
+            <li>people have the right to leave</li>
+            <li>birthright citizenship was focused on freeing the slaves</li>
+            <li>supreme court threw out consent of citizenship</li>
+            <li>people coming to the United States can claim that under your laws there's nothing you can do about me coming here</li>
+            <li>no national right to citizenship</li>
+            <li>more duties which exist between citizens composes the law under these principles</li>
+            <li>non-citizens have no rights</li>
+            <li>republican governments require a particular kind of citizen</li>
+            <li>if one wants to retain rights one must fight to defend them</li>
+            <li>people's governments conform certain principles on them, and somebody who has come from an alternative form of government will have a tough time with integration</li>
+            <li>new citizens have to adopt principles of government</li>
+            <li>problem when too many immigrants form in one place because they retain their native culture</li>
+            <li>America has a right and duty to rationalize the immigration process in favor of the American people themselves, not foreigners</li>
+        </ul>
+        <h3>Yang Gang</h3>
+        <p>The enlightened side of the internet really outdid themselves with Yang.</p>
+        <img src="./Pictures/drumpf.jpeg" style="width:35%;padding-top:20px;">
+        <img src="./Pictures/yang.jpeg" style="width:30%;padding-top:20px;padding-left:30px;">
+        <img src="./Pictures/maga.jpeg" style="width:25%;padding-top:20px;padding-left:20px;">
+        <img src="./Pictures/amazon.png" style="width:25%;padding-top:20px;padding-left:70px;">
+        <img src="./Pictures/gang.jpeg" style="width:30%;padding-top:20px;padding-left:40px;">
+        <img src="./Pictures/pepe.jpg" style="width:20%;padding-top:20px;padding-left:100px;">
+        <img src="./Pictures/gal.jpg" style="width:25%;padding-top:20px;padding-right:20px;padding-left:60px;">
+        <img src="./Pictures/boomer.jpg" style="width:30%;padding-top:20px;">
+        <img src="./Pictures/quote.jpg" style="width:30%;padding-top:20px;padding-left:20px;">
+        <p>That's enough. Wonder to what extent this helped/hurt his campaign. If we're to learn any lesson from drumpf I'm assuming helped.</p>
+        <p>There was another one but that might've actually gotten me in trouble.</p>
     </body>
 </html>
