--- a/ethics.html
+++ b/ethics.html
@@ -10,5 +10,14 @@
         <center>
             <h3>Book 1 of Aristotle's "Nichomacean Ethics"</h3>
         </center>
+        <p>Book one consists of a preface, defining key words, examining others' definition of happiness, and examining what parts make up the soul. Good is that which all means aim. It is the nature of products to be better than the activities. Following from these two statements, the chief goods are those which are undertaken for its own sake. His definition of happy aligns with most others, which is living and faring well. The definition of happiness though is a little harder to find. Honor is pursued for men to be assured of their merits, which means that it is dependent on those giving praise. Some seek out merit to be assured of their practical wisdom, this is excellence.</p>
+        <p>Aristotle rejects Plato's theory of Forms on the grounds that a universal only exists in a particular., which means it can't exist independently. The good action is for whose sake everything is done. There are multiple ends, it follows then that not all ends are complete; the chief good must be a complete one. Complete is a good which is desirable in it of itself. The complete good is self-sufficient. Self-sufficient is that which when isolated by itself makes life desirable and lacking in nothing. </p>
+        <p>Every object has a function. Man's function is an active life that has a rational principle. Human good is then an activity of the soul in conformity with excellence. The goods that relate to the soul is that which is truly good. The man who is a lover of noble deeds has no further need of pleasure because he finds it in itself. Excellent actions are in themselves  pleasant. Happiness is then the best, noblest, and most pleasant. In addition to that happiness also requires external goods because it would be impossible to do noble acts without them. The happy man will always remain happy because he will be concentrated on excellent deeds, therefore in addition bear the turmoil life brings nobly. He who is happy acts in conformity with complete excellence and is sufficiently equipped with external goods.</p>
+        <p>Two parts make up your soul. One is rational and the other irrational. These two parts have other subsets that listen to the main principle in varying degrees of conformity. Those which merit praise is called excellence.</p>
+        <h3>Thoughts</h3>
+        <p>I haven't read the entire thing but it is sort of depressing that all these thinkers don't believe in altruism. Everything is either directed at power, pleasure, or salvation in some deity. Another thing I don't understand is that I believe Plato argued for free will. He also then held that all error is committed unintentionally because no one intentionally errs. Isn't this a contradiction?</p>
+        <center>
+            <img src="./Pictures/alexander.jpeg" style="width:30%;padding-top:20px;">
+        </center>
     </body>
 </html>
